--- a/index.html
+++ b/index.html
@@ -1,1 +1,133 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Albert Portfolio</title>
+    <link rel="stylesheet" href="Portfolio.css">
+</head>
+<body>
+   <!-- Parent Section --> 
+   <section id="Parent">
+       <div class="Parent container">
+           <div>
+               <h1>Hello, <span></span></h1>
+               <h1> My Name is <span></span></h1>
+               <h1>SOGOUE Albert <span></span></h1>
+               <a href="#" type="button" class="cta">Portfolio</a>
+           </div>
+       </div>
+   </section>
+   <!-- End Parent Section -->
 
+
+   <!-- Services Section -->
+   <section id="services">
+       <div class="services container">
+           <div class="services-top">
+               <h1 class="section-title">Serv<span>i</span>ces</h1>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Saepe, 
+                 enim fugit accusantium dolore beatae soluta voluptatum <br> maiores ea? 
+                saepe corporis beatae neque aliquid <br> placeat nihil porro.</p>
+           </div>
+           <div class="services-bottom">
+               <div class="services-items">
+                   <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png"/></div>
+                   <h2>Back-End</h2>
+                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+                     Ducimus consequatur ab consequuntur nobis officia incidunt </p>
+               </div>
+               <div class="services-items">
+                <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png"/></div>
+                <h2>Back-End</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+                  Ducimus consequatur ab <br> consequuntur nobis officia incidunt </p>
+            </div>
+            <div class="services-items">
+                <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png"/></div>
+                <h2>Back-End</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+                  Ducimus consequatur ab <br> consequuntur nobis officia incidunt </p>
+            </div>
+           </div>
+       </div>
+   </section>
+   <!-- End Services Section -->
+
+
+   <!-- Projets Section -->
+   <section id="projets">
+       <div class="projets container">
+            <div class="projets-header">
+                <h1 class="section-title">Recents <span>Projets</span></h1>
+            </div>
+            <div class="all-projets">
+                <div class="projets-items">
+                    <div class="projets-info">
+                        <h1>Projets 1</h1>
+                        <h2>Coding is Love</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br>
+                            Reiciendis dolorum quae quod neque commodi facilis sit, <br>
+                            rem perspiciatis veniam fugiat dolor cumque, hic porro <br>
+                            tenetur optio quam quasi?
+                             Mollitia, obcaecati?</p>
+                    </div>
+                    <div class="projets-img">
+                        <img src="main.jfif" alt="img">
+                    </div>
+                </div>
+                <div class="projets-items">
+                    <div class="projets-info">
+                        <h1>Projets 2</h1>
+                        <h2>Coding is Love</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br>
+                            Reiciendis dolorum quae quod neque commodi facilis sit, <br>
+                            rem perspiciatis veniam fugiat dolor cumque, hic porro <br>
+                            tenetur optio quam quasi?
+                             Mollitia, obcaecati?</p>
+                    </div>
+                    <div class="projets-img">
+                        <img src="main.jfif" alt="img">
+                    </div>
+                </div>
+                <div class="projets-items">
+                    <div class="projets-info">
+                        <h1>Projets 3</h1>
+                        <h2>Coding is Love</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br>
+                            Reiciendis dolorum quae quod neque commodi facilis sit, <br>
+                            rem perspiciatis veniam fugiat dolor cumque, hic porro <br>
+                            tenetur optio quam quasi?
+                             Mollitia, obcaecati?</p>
+                    </div>
+                    <div class="projets-img">
+                        <img src="main.jfif" alt="img">
+                    </div>
+                </div>
+            </div>
+       </div>
+   </section>
+   <!-- End Projets Section -->
+   <!-- About Section -->
+   <section id="about">
+    <div class="about container">
+        <div class="mamie-left">
+            <div class="about-img">
+                <img src="Rectangle 9.png" alt="img">
+            </div>
+        </div>
+        <div class="mamie-right">
+            <h1 class="section-title">About <span>Me</span></h1>
+            <h2>Back end developer</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+                 Amet facilis nemo impedit, earum sunt enim nihil eligendi. <br>
+                  Totam, excepturi sit sunt consequatur delectus voluptatibus <br>
+                   eligendi, 
+                quos veritatis possimus repudiandae iste.</p>
+        </div>
+    </div>
+   </section>
+   <!-- Endd About Section -->
+</body>
+</html>
