--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
                   Totam, excepturi sit sunt consequatur delectus voluptatibus <br>
                    eligendi, 
                 quos veritatis possimus repudiandae iste.</p>
+           <button><a href="#">Download Resume</a></button> 
         </div>
     </div>
    </section>
