--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div class="projets-info">
                         <h1>Projets 1</h1>
                         <h2>Coding is Love</h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br>
+                        <p>Lorem ipsum dolor, sit amet consectetur<br> adipisicing elit. 
                             Reiciendis dolorum quae quod neque commodi facilis sit, <br>
                             rem perspiciatis veniam fugiat dolor cumque, hic porro <br>
                             tenetur optio quam quasi?
@@ -81,7 +81,7 @@
                     <div class="projets-info">
                         <h1>Projets 2</h1>
                         <h2>Coding is Love</h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br>
+                        <p>Lorem ipsum dolor, sit amet consectetur<br> adipisicing elit.
                             Reiciendis dolorum quae quod neque commodi facilis sit, <br>
                             rem perspiciatis veniam fugiat dolor cumque, hic porro <br>
                             tenetur optio quam quasi?
@@ -95,7 +95,7 @@
                     <div class="projets-info">
                         <h1>Projets 3</h1>
                         <h2>Coding is Love</h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br>
+                        <p>Lorem ipsum dolor, sit amet consectetur<br> adipisicing elit. 
                             Reiciendis dolorum quae quod neque commodi facilis sit, <br>
                             rem perspiciatis veniam fugiat dolor cumque, hic porro <br>
                             tenetur optio quam quasi?
@@ -125,10 +125,72 @@
                   Totam, excepturi sit sunt consequatur delectus voluptatibus <br>
                    eligendi, 
                 quos veritatis possimus repudiandae iste.</p>
-           <button><a href="#">Download Resume</a></button> 
+           <a href="#" class="cta">Download Resume</a>
         </div>
     </div>
    </section>
-   <!-- Endd About Section -->
+   <!-- End About Section -->
+
+
+   <!-- Contact Section -->
+   <section id="contact">
+       <div class="contact container">
+           <div><h1 class="section-title">Contact <span>Info</span></h1></div>
+           <div class="contact-items">
+                <div class="contact-item">
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png"/></div>
+                    <div class="contact-info">
+                        <h1>Phone</h1>
+                        <h2>+241066542187</h2>
+                        <h2>+241066542187</h2>
+                    </div>
+                </div>
+                <div class="contact-item">
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png"/></div>
+                    <div class="contact-info">
+                        <h1>Email</h1>
+                        <h2>sogouealbert@gmail.com</h2>
+                        <h2>sogouealbert@gmail.com</h2>
+                    </div>
+                </div>
+                <div class="contact-item">
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png"/></div>
+                    <div class="contact-info">
+                        <h1>Adress</h1>
+                        <h2>Port-Gentil</h2>
+                        <h2>Gabon</h2>
+                    </div>
+                </div>
+           </div>
+       </div>
+   </section>
+   <!-- End Contact Section -->
+
+   <!-- Footer -->
+   <section id="footer">
+       <div class="footer container">
+           <div class="brand"><h1><span>A</span>lbert <span>S</span>OGOUE</h1></div>
+           <h2>Your Complete Web Solution</h2>
+            <div class="parent">
+                <div class="social-icon">
+                    <div class="social-item">
+                        <a href="#"><img src="https://img.icons8.com/color/48/000000/facebook-new.png"/></a>
+                    </div>
+                </div>
+                <div class="social-icon">
+                    <div class="social-item">
+                        <a href="#"><img src="https://img.icons8.com/fluency/48/000000/instagram-new.png"/></a>
+                    </div>
+                </div>
+                <div class="social-icon">
+                    <div class="social-item">
+                        <a href="#"><img src="https://img.icons8.com/fluency/48/000000/twitter.png"/></a>
+                    </div>
+                </div>
+                <p>Copyright 2022 KENGUE. All rights reserved</p>
+            </div>
+       </div>
+   </section>
+   <!-- End Footer -->
 </body>
 </html>
