--- a/index.html
+++ b/index.html
@@ -6,191 +6,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Albert Portfolio</title>
     <link rel="stylesheet" href="Portfolio.css">
+    <link rel="stylesheet" media="screen and (max-width: 800px)" href="tablet.css">
+    <link rel="stylesheet" media="screen and (max-width: 530px)" href="phone.css">
 </head>
 <body>
-   <!-- Parent Section --> 
-   <section id="Parent">
-       <div class="Parent container">
-           <div>
-               <h1>Hello, <span></span></h1>
-               <h1> My Name is <span></span></h1>
-               <h1>SOGOUE Albert <span></span></h1>
-               <a href="#" type="button" class="cta">Portfolio</a>
-           </div>
-       </div>
-   </section>
-   <!-- End Parent Section -->
+  <nav class="navbar">
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About Me</a></li>
+      <li><a href="#portfolio">Portfolio</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#contact">Contact Me</a></li>
 
+    </ul>
+  </nav>
 
-   <!-- Services Section -->
-   <section id="services">
-       <div class="services container">
-           <div class="services-top">
-               <h1 class="section-title">Serv<span>i</span>ces</h1>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Saepe, 
-                 enim fugit accusantium dolore beatae soluta voluptatum <br> maiores ea? 
-                saepe corporis beatae neque aliquid <br> placeat nihil porro.</p>
-           </div>
-           <div class="services-bottom">
-               <div class="services-items">
-                   <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png"/></div>
-                   <h2>Back-End</h2>
-                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
-                     Ducimus consequatur ab consequuntur nobis officia incidunt </p>
-               </div>
-               <div class="services-items">
-                <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png"/></div>
-                <h2>Back-End</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
-                  Ducimus consequatur ab <br> consequuntur nobis officia incidunt </p>
-            </div>
-            <div class="services-items">
-                <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png"/></div>
-                <h2>Back-End</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
-                  Ducimus consequatur ab <br> consequuntur nobis officia incidunt </p>
-            </div>
-           </div>
-       </div>
-   </section>
-   <!-- End Services Section -->
-
-
-   <!-- Projets Section -->
-   <section id="projets">
-       <div class="projets container">
-            <div class="projets-header">
-                <h1 class="section-title">Recents <span>Projets</span></h1>
-            </div>
-            <div class="all-projets">
-                <div class="projets-items">
-                    <div class="projets-info">
-                        <h1>Projets 1</h1>
-                        <h2>Coding is Love</h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur<br> adipisicing elit. 
-                            Reiciendis dolorum quae quod neque commodi facilis sit, <br>
-                            rem perspiciatis veniam fugiat dolor cumque, hic porro <br>
-                            tenetur optio quam quasi?
-                             Mollitia, obcaecati?</p>
-                    </div>
-                    <div class="projets-img">
-                        <img src="main.jfif" alt="img">
-                    </div>
-                </div>
-                <div class="projets-items">
-                    <div class="projets-info">
-                        <h1>Projets 2</h1>
-                        <h2>Coding is Love</h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur<br> adipisicing elit.
-                            Reiciendis dolorum quae quod neque commodi facilis sit, <br>
-                            rem perspiciatis veniam fugiat dolor cumque, hic porro <br>
-                            tenetur optio quam quasi?
-                             Mollitia, obcaecati?</p>
-                    </div>
-                    <div class="projets-img">
-                        <img src="main.jfif" alt="img">
-                    </div>
-                </div>
-                <div class="projets-items">
-                    <div class="projets-info">
-                        <h1>Projets 3</h1>
-                        <h2>Coding is Love</h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur<br> adipisicing elit. 
-                            Reiciendis dolorum quae quod neque commodi facilis sit, <br>
-                            rem perspiciatis veniam fugiat dolor cumque, hic porro <br>
-                            tenetur optio quam quasi?
-                             Mollitia, obcaecati?</p>
-                    </div>
-                    <div class="projets-img">
-                        <img src="main.jfif" alt="img">
-                    </div>
-                </div>
-            </div>
-       </div>
-   </section>
-   <!-- End Projets Section -->
-   <!-- About Section -->
-   <section id="about">
-    <div class="about container">
-        <div class="mamie-left">
-            <div class="about-img">
-                <img src="Rectangle 9.png" alt="img">
-            </div>
-        </div>
-        <div class="mamie-right">
-            <h1 class="section-title">About <span>Me</span></h1>
-            <h2>Back end developer</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
-                 Amet facilis nemo impedit, earum sunt enim nihil eligendi. <br>
-                  Totam, excepturi sit sunt consequatur delectus voluptatibus <br>
-                   eligendi, 
-                quos veritatis possimus repudiandae iste.</p>
-           <a href="#" class="cta">Download Resume</a>
-        </div>
+  <section id="home">
+    <div class="main">
+      <h1 class="headings">I AM <br> ALBERT SOGOUE</h1>
+      <button class="btn">
+        Hire me
+      </button>
     </div>
-   </section>
-   <!-- End About Section -->
+  </section>
 
+  <section id="about">
+    <h1 class="headings">ABOUT ME</h1>
+    <div id="pic">
+      <img src="Rectangle 9.png" alt="">
+      <div id="intro">
+        <h2>ALBERT SOGOUE</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam illum ratione nobis, iusto sint beatae temporibus exercitationem! Vel nemo, repudiandae dolorum dolores qui mollitia sit consequatur nesciunt, reiciendis impedit eos.</p>
+      </div>
+    </div>
+  </section>
 
-   <!-- Contact Section -->
-   <section id="contact">
-       <div class="contact container">
-           <div><h1 class="section-title">Contact <span>Info</span></h1></div>
-           <div class="contact-items">
-                <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png"/></div>
-                    <div class="contact-info">
-                        <h1>Phone</h1>
-                        <h2>+241066542187</h2>
-                        <h2>+241066542187</h2>
-                    </div>
-                </div>
-                <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png"/></div>
-                    <div class="contact-info">
-                        <h1>Email</h1>
-                        <h2>sogouealbert@gmail.com</h2>
-                        <h2>sogouealbert@gmail.com</h2>
-                    </div>
-                </div>
-                <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png"/></div>
-                    <div class="contact-info">
-                        <h1>Adress</h1>
-                        <h2>Port-Gentil</h2>
-                        <h2>Gabon</h2>
-                    </div>
-                </div>
-           </div>
-       </div>
-   </section>
-   <!-- End Contact Section -->
+  <section id="portfolio">
+    <h1 class="headings">PORTFOLIO</h1>
+    <div class="gallery">
+      <img src="back.png" alt="">
+      <img src="DEV.jpeg" alt="">
+      <img src="Rectangle 24.png" alt="">
+      <img src="Rectangle 3 1.png" alt="">
+    </div>
+  </section>
 
-   <!-- Footer -->
-   <section id="footer">
-       <div class="footer container">
-           <div class="brand"><h1><span>A</span>lbert <span>S</span>OGOUE</h1></div>
-           <h2>Your Complete Web Solution</h2>
-            <div class="parent">
-                <div class="social-icon">
-                    <div class="social-item">
-                        <a href="#"><img src="https://img.icons8.com/color/48/000000/facebook-new.png"/></a>
-                    </div>
-                </div>
-                <div class="social-icon">
-                    <div class="social-item">
-                        <a href="#"><img src="https://img.icons8.com/fluency/48/000000/instagram-new.png"/></a>
-                    </div>
-                </div>
-                <div class="social-icon">
-                    <div class="social-item">
-                        <a href="#"><img src="https://img.icons8.com/fluency/48/000000/twitter.png"/></a>
-                    </div>
-                </div>
-                <p>Copyright 2022 KENGUE. All rights reserved</p>
-            </div>
-       </div>
-   </section>
-   <!-- End Footer -->
+  <section id="services">
+    <h1 class="headings">SERVICES</h1>
+    <div class="row">
+      <div class="box">
+        <img src="Rectangle 3 1.png" alt="">
+        <h1 class="headings">Website <br> Design</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga in, recusandae ducimus libero quo dolores? At expedita nostrum perferendis autem recusandae, et iusto, voluptatum delectus assumenda itaque tempore mollitia nobis.</p>
+      </div>
+      <div class="box">
+        <img src="Rectangle 24.png" alt="">
+        <h1 class="headings">UX/UI <br> Design</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga in, recusandae ducimus libero quo dolores? At expedita nostrum perferendis autem recusandae, et iusto, voluptatum delectus assumenda itaque tempore mollitia nobis.</p>
+      </div>
+      <div class="box">
+        <img src="DEV.jpeg" alt="">
+        <h1 class="headings">Digital <br> Marketing</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga in, recusandae ducimus libero quo dolores? At expedita nostrum perferendis autem recusandae, et iusto, voluptatum delectus assumenda itaque tempore mollitia nobis.</p>
+      </div>
+
+    </div>
+  </section>
+
+  <section id="contact">
+    <h1 class="headings">CONTACT ME</h1>
+    <form action="" class="form">
+      <input type="text" name="name" class="input" placeholder="Enter Your Name">
+      <input type="email" name="email" class="input" placeholder="Enter Your Email">
+      <textarea name="msg" id="msg" cols="30" rows="10" placeholder="Enter Your Message"></textarea>
+      <input type="submit" value="SEND" id="send">
+    </form>
+  </section>
 </body>
 </html>
